Window events completed

--- a/htmlEventAttributes/htmlEventAttributes.html
+++ b/htmlEventAttributes/htmlEventAttributes.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <h1>Html Event Attributes</H1>
+    <p>These events allow for a script to be run on specific actions on the page.</p>
     
-        <nav>
-            <a href="./clipboardEventAttributes/clipboardEventAttributes.html">Clipboard event attributes</a>
-            <span>||</span>
-            <a href="./dragEventAttributes/dragEventAttributes.html">Drag event Attributes</a>
-            <span>||</span>
-            <a href="./formEventAttributes/formEventAttributes.html">Form event attributes</a>
-            <span>||</span>
-            <a href="./keyboardEventAttributes/keyboardEventAttributes.html">Keyboard event attributes</a>
-            <span>||</span>
-            <a href="./mediaEventAttributes/mediaEventAttributes.html">Media event attributes</a>
-            <span>||</span>
-            <a href="./mouseEventAttributes/mouseEventAttributes.html">Mouse event attributes</a>
-            <span>||</span>
-            <a href="./miscEventAttributes/miscEventAttributes.html">Misc event attributes</a>
-        </nav>
+    <nav>
+        <a href="./clipboardEventAttributes/clipboardEventAttributes.html">Clipboard event attributes</a>
+        <span>||</span>
+        <a href="./dragEventAttributes/dragEventAttributes.html">Drag event Attributes</a>
+        <span>||</span>
+        <a href="./formEventAttributes/formEventAttributes.html">Form event attributes</a>
+        <span>||</span>
+        <a href="./keyboardEventAttributes/keyboardEventAttributes.html">Keyboard event attributes</a>
+        <span>||</span>
+        <a href="./mediaEventAttributes/mediaEventAttributes.html">Media event attributes</a>
+        <span>||</span>
+        <a href="./mouseEventAttributes/mouseEventAttributes.html">Mouse event attributes</a>
+        <span>||</span>
+        <a href="./miscEventAttributes/miscEventAttributes.html">Misc event attributes</a>
+        <span>||</span>
+        <a href="./windowEventAttributes/windowEventAttributes.html">Window event attributes</a>
+    </nav>
 
 </body>
