--- a/lessonsLearned.html
+++ b/lessonsLearned.html
@@ -304,5 +304,11 @@
         <li>XHTML is supported by all major browsers</li>
         <img src="./0media/images/lessonsLearned/xhtml/xhtmlVShtml.png" alt="">
     </details>
+    <details>
+        <summary>Event attribute script function names</summary>
+        <p>Sometimes adding the name of a function that is meant for an event to trigger doesnt work due to its name.</p>
+        <p>This is because some function names are not allowed to work or be triggered as i think they are used elsewhere as a function name.</p>
+        <p>Simply changing the name or adding some extra letters on the end of the function name fixes this.</p>
+    </details>
 </body>
 </html>
