mouse events actually completed

--- a/htmlEventAttributes/mouseEventAttributes/mouseEventAttributes.html
+++ b/htmlEventAttributes/mouseEventAttributes/mouseEventAttributes.html
@@ -118,7 +118,8 @@
         <p>Use the scrollwheel whilst hovering over the image.</p>
         <img id="mouseImageExample" style="height: 200px;" src="./0media/images/randomImage.jpg" onmousewheel="wheel()">
         <p>This is how its coded:</p>
-        <img src="">
+        <img src="./0media/images/onmousewheelExample1.png">
+        <img src="./0media/images/onmousewheelExample2.png">
 
         <h3>Syntax:</h3>
         <p>&lt;element onmousewheel="script"&gt;</p>
