--- a/htmlEventAttributes/mouseEventAttributes/mouseEventAttributes.html
+++ b/htmlEventAttributes/mouseEventAttributes/mouseEventAttributes.html
@@ -53,10 +53,7 @@
 </head>
 <body>
     <h1>Mouse Event Attributes</h1>
-
-    <p>Move your mouse over and out of the image below. </p>
     
-
     <details>
         <summary><b>onmousedown, onmouseup, onclick, ondblclick</b></summary>
 
@@ -69,7 +66,6 @@
         <p>A right click goes through the same events except an oncontextmenu is triggered after onmouseup.</p>
 
         <h3>Examples:</h3>
-
         <button id="mouseClickExample" onmousedown="mousedown()" onmouseup="mouseup()" onclick="mouseclick()" ondblclick="dblclick()" >SINGLE or DOUBLE CLICK ME!</button>
         <p>This is how its coded:</p>
         <img src="./0media/images/onclicksExample1.png">
@@ -95,6 +91,7 @@
         <li>onmouseout - moves out of the element</li>
 
         <h3>Examples:</h3>
+        <p>Move your mouse over the following image:</p>
         <img src="./0media/images/randomImage.jpg" onmousemove="mousemove()" onmouseout="mouseout()" onmouseover="mouseover()">
         <p>This is how its coded:</p>
         <img src="./0media/images/onmouseExample1.png">
